syntax = "proto3";

package depot.ci.v1;

import "google/protobuf/timestamp.proto";

service SecretService {
  rpc AddSecret(AddSecretRequest) returns (AddSecretResponse);
  rpc RemoveSecret(RemoveSecretRequest) returns (RemoveSecretResponse);
  rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse);
  rpc UpdateSecretDescription(UpdateSecretDescriptionRequest) returns (UpdateSecretDescriptionResponse);
  rpc BatchAddSecrets(BatchAddSecretsRequest) returns (BatchAddSecretsResponse);
}

message AddSecretRequest {
  string name = 1;
  string value = 2;
  optional string description = 3;
}

message AddSecretResponse {}

message RemoveSecretRequest {
  string name = 1;
}

message RemoveSecretResponse {}

message ListSecretsRequest {}

message ListSecretsResponse {
  repeated Secret secrets = 1;
}

message Secret {
  string name = 1;
  optional string description = 2;
  optional google.protobuf.Timestamp last_modified = 3;
}

message UpdateSecretDescriptionRequest {
  string name = 1;
  string description = 2;
}

message UpdateSecretDescriptionResponse {}

message BatchAddSecretsRequest {
  repeated AddSecretRequest secrets = 1;
}

message BatchAddSecretsResponse {}
